--- a/initial_research/front.tex
+++ b/initial_research/front.tex
@@ -2,7 +2,7 @@
 
 \newcommand{\gh}{\href{https://github.com/Unike267}{gh:Unike267}}
 \newcommand{\type}{Doctoral Programme in Engineering Physics}
-\newcommand{\titulo}{Initial concepts of the Thesis} % CHANGE HERE
+\newcommand{\titulo}{Initial Research of the Thesis} % CHANGE HERE
 \title{Title}
 \newcommand{\subtitle}{\textit{\href{https://github.com/Unike267/Thesis}{gh:Unike267/Thesis}}}
 
