Update Key Words and subsections

--- a/initial_research/sections/intro.tex
+++ b/initial_research/sections/intro.tex
@@ -9,16 +9,24 @@ To start on this long way we will focus on the principal key words of this Thesi
 \noindent These are: 
 
 \begin{itemize}
-\item Spiking Neural Networks
-\item SPAD sensors
-\item DVS sensors
+\item White Rabbit Project
+\begin{itemize}
+\item Synchronous Ethernet (SyncE) 
+\item PTP (Precision Time Protocol) 
+\end{itemize}
+\item SPAD Sensors
 \item TSN
 \item RISC-V.
+\item Neuromorphic Sensors
 \end{itemize}
 
-\subsection{Spiking Neural Networks}
+\subsection{White Rabbit Project}
 
-\subsection{SPAD sensors}
+\subsubsection{Synchronous Ethernet (SyncE)}
+
+\subsubsection{PTP (Precision Time Protocol)}
+
+\subsection{SPAD Sensors}
 
 SPAD (Single-Photon Avalanche Diode) \cite{9031298} sensors are an advanced type of photodiode sensor, specifically designed to detect extremely low amounts of light, to the single photon level. 
 This makes them ideal for applications requiring exceptional sensitivity and the ability to measure extremely \textbf{fast} light events.
@@ -99,10 +107,10 @@ This makes them ideal for applications requiring exceptional sensitivity and the
     \end{itemize}
 \end{itemize}
 
-\subsection{DVS sensors}
-
 \subsection{TSN}
 
 \subsection{RISC-V}
+
+\subsection{Neuromorphic Sensors}
 
 
