--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -32,4 +32,21 @@
   doi={10.1109/ACCESS.2023.3244793}
 }
 
+@misc{white-rabbit,
+  author = {{CERN}},
+  title = {{The White Rabbit Project}},
+  year = {2024},
+  publisher = {CERN},
+  journal = {Web page},
+  howpublished = {\href{https://white-rabbit.web.cern.ch/}{white-rabbit.web.cern.ch}}
+}
+
+@misc{gl:chronos,
+  author = {{CERN}},
+  title = {{Chronos Project}},
+  year = {2024},
+  publisher = {GitLab},
+  journal = {GitLab Group},
+  howpublished = {\href{https://gitlab.cern.ch/be-cem-edl/chronos}{gl.cern:be-cem-edl/chronos}}
+}
 
