--- a/initial_research/sections/intro.tex
+++ b/initial_research/sections/intro.tex
@@ -13,6 +13,7 @@ To start on this long way we will focus on the principal key words of this Thesi
 \begin{itemize}
 \item Synchronous Ethernet (SyncE) 
 \item PTP (Precision Time Protocol) 
+\item Chronos Project
 \end{itemize}
 \item SPAD Sensors
 \item TSN
@@ -22,9 +23,23 @@ To start on this long way we will focus on the principal key words of this Thesi
 
 \subsection{White Rabbit Project}
 
+The White Rabbit Project \cite{white-rabbit} is a high-precision synchronization system developed by CERN (the European Organization for Nuclear Research).
+It’s designed to achieve extremely accurate time synchronization across \textbf{distributed networks}. 
+Specifically, it combines Ethernet and Synchronous Ethernet (SyncE) technologies with PTP (Precision Time Protocol), creating what is known as the \say{White Rabbit Protocol}.
+The primary goal is to ensure that all connected devices are synchronized within sub-nanosecond accuracy.
+
+
 \subsubsection{Synchronous Ethernet (SyncE)}
 
 \subsubsection{PTP (Precision Time Protocol)}
+
+\subsubsection{Chronos Project}
+
+Chronos is an advanced timing and synchronization project at CERN, designed to support extremely precise timekeeping requirements in high-energy physics experiments. 
+
+\vspace{5 mm}
+
+\noindent Built on the foundations of the White Rabbit Project, Chronos \cite{gl:chronos} aims to improve upon CERN’s existing timing systems by achieving even more refined synchronization, essential for coordinating complex experiments and data acquisition across CERN’s infrastructure.
 
 \subsection{SPAD Sensors}
 
