--- a/initial_research/sections/intro.tex
+++ b/initial_research/sections/intro.tex
@@ -28,6 +28,53 @@ It’s designed to achieve extremely accurate time synchronization across \textb
 Specifically, it combines Ethernet and Synchronous Ethernet (SyncE) technologies with PTP (Precision Time Protocol), creating what is known as the \say{White Rabbit Protocol}.
 The primary goal is to ensure that all connected devices are synchronized within sub-nanosecond accuracy.
 
+\vspace{5 mm}
+
+\noindent Principal characteristics:
+
+\begin{itemize}
+\item High Synchronization Precision
+    \begin{itemize}
+    \item[>] White Rabbit achieves sub-nanosecond precision in synchronizing all nodes within a network, making it essential for particle physics experiments where precise timing is critical.
+    \end{itemize}
+\item High Time and Frequency Distribution
+    \begin{itemize}
+    \item[>] White Rabbit enables not only time synchronization but also frequency distribution across devices.
+    \item[>] This capability is valuable in scientific experiments, advanced telecommunications, and financial systems where every microsecond matters.
+    \end{itemize}
+\item Based on Open Standards
+    \begin{itemize}
+    \item[>] White Rabbit uses open standards, which makes it easy to adopt and adapt to different environments. 
+    \item[>] It’s an Open Source hardware and software system, allowing the scientific and tech communities to improve and customize it.
+    \end{itemize}
+\item Optical Fiber Delay Compensation
+    \begin{itemize}
+    \item[>] To achieve such high precision, White Rabbit measures and compensates for delays in optical fiber cables, eliminating latency variations that occur over long distances.
+    \end{itemize}
+\end{itemize}
+
+\vspace{5 mm}
+
+\noindent White Rabbit has been adopted across multiple sectors, including:
+
+\begin{itemize}
+\item Scientific Research
+    \begin{itemize}
+    \item[>] At CERN and other particle physics labs, White Rabbit is crucial for synchronizing detectors, sensors, and other distributed devices in large experimental facilities.
+    \end{itemize}
+\item Telecommunications
+    \begin{itemize}
+    \item[>] Telecom providers use White Rabbit to enhance network synchronization accuracy, particularly in \textbf{5G networks} and low-latency services.
+    \end{itemize}
+\item Industrial Automation
+    \begin{itemize}
+    \item[>] In production environments, precise synchronization between machines and control systems improves efficiency and reduces errors.
+    \end{itemize}
+\item Finance
+    \begin{itemize}
+    \item[>] In finance, where precise timing is critical for high-frequency trading (HFT), White Rabbit enables superior timestamp accuracy.
+    \end{itemize}
+\end{itemize}
 
 \subsubsection{Synchronous Ethernet (SyncE)}
 
