--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -41,6 +41,15 @@
   howpublished = {\href{https://white-rabbit.web.cern.ch/}{white-rabbit.web.cern.ch}}
 }
 
+@misc{white-rabbit:poster,
+  author = {Lipinski, Maciej and Serrano, Javier and Wlostowski, Tomasz},
+  title = {{Reliability in a White Rabbit Network}},
+  year = {2011},
+  publisher = {CERN},
+  journal = {Online Poster},
+  howpublished = {\href{https://ohwr.org/project/white-rabbit/uploads/ff98688542afbe36e9f11877ba4c5f1a/ICALEPCS2011_poster.pdf}{ohwr.org/project/white-rabbit/posters/WR\_Maciej\_ICALEPCS2011/WR\_poster\_A0\_final.pdf}}
+}
+
 @misc{gl:chronos,
   author = {{CERN}},
   title = {{Chronos Project}},
