--- a/initial_research/sections/intro.tex
+++ b/initial_research/sections/intro.tex
@@ -30,6 +30,13 @@ The primary goal is to ensure that all connected devices are synchronized within
 
 \vspace{5 mm}
 
+\noindent According to this ICALPECS 2011 poster (13th International Conference on Accelerator and Large Experimental Physics Control Systems) \cite{white-rabbit:poster}, titled \say{Reliability
+in a White Rabbit Network}, White Rabbit (WR) is a time-deterministic, low-latency Ethernet-based network which enables transparent, sub-ns accuracy timing distribution. 
+It is being developed to replace the General Machine Timing (GMT) system currently (2011) used at CERN and will become the foundation for the control system of the Facility for Antiproton and Ion Research (FAIR) at GSI.
+High reliability is an important issue in WR’s design, since unavailability of the accelerator’s control system will directly translate into expensive downtime of the machine.
+
+\vspace{5 mm}
+
 \noindent Principal characteristics:
 
 \begin{itemize}
