--- a/initial_research/front.tex
+++ b/initial_research/front.tex
@@ -9,7 +9,7 @@
 % -------------------------------- Front content
 \begin{center}\leavevmode
     \normalfont
-    \includegraphics[width=0.35\columnwidth]{figures/logo.png}
+    \includegraphics[width=1.05 \columnwidth]{figures/logos_perte.png}
     \vskip 10mm 
     \textit{\Large \gh}\\[1 cm]
     {\large \type}
@@ -25,6 +25,8 @@
     \vskip 5mm
 	\emph{\textbf{ORCID:}}\\
     \href{https://orcid.org/0000-0002-4120-8313}{0000-0002-4120-8313}
+    \vskip 20mm 
+    \includegraphics[width=0.75 \columnwidth]{figures/logo.png}
     \vfill
     {\normalsize \today \par}
 \end{center}
