Add EtherBone item & bibtex

--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -59,3 +59,12 @@
   howpublished = {\href{https://gitlab.cern.ch/be-cem-edl/chronos}{gl.cern:be-cem-edl/chronos}}
 }
 
+@misc{gl:etherbone-core,
+  author = {{CERN}},
+  title = {{EtherBone Core}},
+  year = {2024},
+  publisher = {GitLab},
+  journal = {GitLab Group},
+  howpublished = {\href{https://ohwr.org/project/etherbone-core}{gl.ohwr.org:project/etherbone-core}}
+}
+
