--- a/initial_research/sections/intro.tex
+++ b/initial_research/sections/intro.tex
@@ -13,6 +13,7 @@ To start on this long way we will focus on the principal key words of this Thesi
 \begin{itemize}
 \item Synchronous Ethernet (SyncE) 
 \item PTP (Precision Time Protocol) 
+\item EtherBone Core
 \item Chronos Project
 \end{itemize}
 \item SPAD Sensors
