Update Project logos

--- a/initial_research/front.tex
+++ b/initial_research/front.tex
@@ -26,7 +26,7 @@
 	\emph{\textbf{ORCID:}}\\
     \href{https://orcid.org/0000-0002-4120-8313}{0000-0002-4120-8313}
     \vskip 20mm 
-    \includegraphics[width=0.75 \columnwidth]{figures/logo.png}
+    \includegraphics[width=0.75 \columnwidth]{figures/All_SoC4sen_logo.png}
     \vfill
     {\normalsize \today \par}
 \end{center}
