Add ASIC-Figure to initial research doc

--- a/initial_research/sections/intro.tex
+++ b/initial_research/sections/intro.tex
@@ -88,6 +88,10 @@ High reliability is an important issue in WR’s design, since unavailability of
 
 \subsubsection{PTP (Precision Time Protocol)}
 
+\subsubsection{EtherBone Core}
+
+Etherbone \cite{gl:etherbone-core} is an FPGA-core that connects Ethernet to internal on-chip wishbone buses permitting any core to talk to any other across Ethernet.
+
 \subsubsection{Chronos Project}
 
 Chronos is an advanced timing and synchronization project at CERN, designed to support extremely precise timekeeping requirements in high-energy physics experiments. 
@@ -183,4 +187,14 @@ This makes them ideal for applications requiring exceptional sensitivity and the
 
 \subsection{Neuromorphic Sensors}
 
+\newpage
+
+\section{ASIC}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=14cm]{figures/ASIC-Scheme.pdf}
+    \caption{ASIC a desarrollar.}
+    \label{fig:ASIC}
+\end{figure}
 
