Add node figure to initial research doc

--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -59,6 +59,15 @@
   howpublished = {\href{https://gitlab.cern.ch/be-cem-edl/chronos}{gl.cern:be-cem-edl/chronos}}
 }
 
+@misc{WR:wiki,
+  author = {{CERN}},
+  title = {{White Rabbit Wiki}},
+  year = {2024},
+  publisher = {GitLab},
+  journal = {GitLab Group},
+  howpublished = {\href{https://ohwr.org/project/white-rabbit/-/wikis/Node}{ohwr.org/project/white-rabbit/-/wikis/Node}}
+}
+
 @misc{gl:etherbone-core,
   author = {{CERN}},
   title = {{EtherBone Core}},
