--- a/initial_research/sections/intro.tex
+++ b/initial_research/sections/intro.tex
@@ -194,7 +194,19 @@ This makes them ideal for applications requiring exceptional sensitivity and the
 \begin{figure}[H]
     \centering
     \includegraphics[width=14cm]{figures/ASIC-Scheme.pdf}
-    \caption{ASIC a desarrollar.}
+    \caption{ASIC to be develop.}
     \label{fig:ASIC}
 \end{figure}
 
+\newpage
+
+\section{White Rabbit Node}
+
+See White Rabbit Wiki \cite{WR:wiki}.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=15cm]{figures/WR_node.pdf}
+    \caption{WR Node.}
+    \label{fig:ASIC}
+\end{figure}
