Update intro & Add WRPC section

--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -77,3 +77,30 @@
   howpublished = {\href{https://ohwr.org/project/etherbone-core}{gl.ohwr.org:project/etherbone-core}}
 }
 
+@misc{WR-core:wiki,
+  author = {{CERN}},
+  title = {{White Rabbit PTP Core (WRPC)}},
+  year = {2024},
+  publisher = {GitLab},
+  journal = {GitLab Group},
+  howpublished = {\href{https://ohwr.org/project/wr-cores/-/wikis/Wrpc-core}{ohwr.org/project/wr-cores/-/wikis/Wrpc-core}}
+}
+
+@misc{WR-core:manual,
+  author = {{CERN}},
+  title = {{White Rabbit PTP Core User’s Manual}},
+  year = {2024},
+  publisher = {GitLab},
+  journal = {GitLab Group},
+  howpublished = {\href{https://ohwr.org/project/wr-cores/-/wikis/uploads/7cf8d2161b6e5fa86348455bbd022196/wrpc-user-manual-v5.0.pdf}{ohwr.org/project/wr-cores/-/wikis/uploads/7cf8d2161b6e5fa86348455bbd022196/wrpc-user-manual-v5.0.pdf}}
+}
+
+@misc{WR:ohwr,
+  author = {{CERN}},
+  title = {{White Rabbit}},
+  year = {2024},
+  publisher = {GitLab},
+  journal = {GitLab Group},
+  howpublished = {\href{https://ohwr.org/project/white-rabbit}{ohwr.org/project/white-rabbit}}
+}
+
