Add urv initial info

--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -104,3 +104,31 @@
   howpublished = {\href{https://ohwr.org/project/white-rabbit}{ohwr.org/project/white-rabbit}}
 }
 
+@misc{urv-core:ohwr,
+  author = {{CERN}},
+  title = {{The uRV (Micro RISC-V) core}},
+  year = {2024},
+  publisher = {GitLab},
+  journal = {GitLab Group},
+  howpublished = {\href{https://ohwr.org/project/urv-core/}{ohwr.org/project/urv-core/}}
+}
+
+@misc{urv-core:wiki,
+  author = {{CERN}},
+  title = {{The uRV (Micro RISC-V) core}},
+  year = {2024},
+  publisher = {GitLab},
+  journal = {GitLab Group},
+  howpublished = {\href{https://ohwr.org/project/urv-core/-/wikis/home}{ohwr.org/project/urv-core/-/wikis/home}}
+}
+
+@article{Włostowski:2213516,
+      author = "Włostowski, Tomasz and Serrano, Javier and Vaga,
+                       Federico",
+      title = "{Developing Distributed Hard-Real Time Software Systems
+                       Using FPGAs and Soft Cores}",
+      pages = "THHA2I01",
+      year  = "2015",
+      url   = "http://cds.cern.ch/record/2213516",
+      doi   = "10.18429/JACoW-ICALEPCS2015-THHA2I01",
+}
