--- a/initial_research/sections/intro.tex
+++ b/initial_research/sections/intro.tex
@@ -251,3 +251,9 @@ It also implements the White Rabbit protocol to provide sub-nanosecond time sync
     \caption{WR PTP (Precision Time Protocol) Core (WRPC).}
     \label{fig:WRPC}
 \end{figure}
+
+\subsection{\textmu RV}
+
+The \textmu RV \cite{urv-core:ohwr} \cite{urv-core:wiki} \cite{Włostowski:2213516} (Micro RISC-V) core is a small-sized implementation of a 32-bit RISC-V core, targeted specifically at FPGAs developed by CERN. 
+
+
