Update WRPC section

--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -104,6 +104,24 @@
   howpublished = {\href{https://ohwr.org/project/white-rabbit}{ohwr.org/project/white-rabbit}}
 }
 
+@misc{WRPC:ohwr,
+  author = {{CERN}},
+  title = {{A collection of cores needed in the White Rabbit node and switch. Includes White Rabbit PTP Core (WRPC)}},
+  year = {2024},
+  publisher = {GitLab},
+  journal = {GitLab Group},
+  howpublished = {\href{https://ohwr.org/project/wr-cores}{ohwr.org/project/wr-cores}}
+}
+
+@misc{WRPC:modules,
+  author = {{CERN}},
+  title = {{WRPC modules}},
+  year = {2024},
+  publisher = {GitLab},
+  journal = {GitLab Group},
+  howpublished = {\href{https://ohwr.org/project/wr-cores/-/tree/master/modules}{ohwr.org/project/wr-cores/-/tree/master/modules}}
+}
+
 @misc{urv-core:ohwr,
   author = {{CERN}},
   title = {{The uRV (Micro RISC-V) core}},
