Add mixed simulator issue

--- a/initial_research/sections/intro.tex
+++ b/initial_research/sections/intro.tex
@@ -281,3 +281,6 @@ Division and multiply high instructions are optional and can be emulated to lowe
     \item[>] Verilog RTL code.
     \end{itemize}
 \end{itemize}
+
+\noindent Since \textmu RV is described in verilog and most of the WRPC component is in VHDL, it will be necessary to use a \textbf{mixed simulator} supported by VUnit.
+In this context, one of the best options is \say{QuestaSim}.
