Add mention of container developed by umarcor

--- a/initial_research/sections/intro.tex
+++ b/initial_research/sections/intro.tex
@@ -284,3 +284,12 @@ Division and multiply high instructions are optional and can be emulated to lowe
 
 \noindent Since \textmu RV is described in verilog and most of the WRPC component is in VHDL, it will be necessary to use a \textbf{mixed simulator} supported by VUnit.
 In this context, one of the best options is \say{QuestaSim}.
+
+\vspace{5mm}
+
+\noindent \href{https://github.com/umarcor}{Umarcor} is planning to develop a container, hosted on our server, for this purpose.
+
+\vspace{5mm}
+
+\noindent \textbf{Task:} Learn how to generate a testbench using both HDLs: VHDL and Verilog.
+
